--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -29,8 +29,7 @@ executable sandbox
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base >=4.14 && <4.15,
-                      ghc ==8.10.5,
-                      ghc-paths >=0.1
+    build-depends:    base >=4.14 && <4.17,
+                      ghc >= 9.3
     hs-source-dirs:   app
     default-language: Haskell2010
