--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -30,6 +30,7 @@ executable sandbox
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base ==4.14.2.0,
-                      ghc == 9.3
+                      ghc == 9.3,
+                      ghc-paths
     hs-source-dirs:   app
     default-language: Haskell2010
