--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -29,8 +29,8 @@ executable sandbox
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ==4.14.2.0,
-                      ghc == 9.3,
+    build-depends:    base >=4.14.2.0,
+                      ghc >= 9.0 && <= 9.1,
                       ghc-paths
     hs-source-dirs:   app
     default-language: Haskell2010
