--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -30,7 +30,6 @@ executable sandbox
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.14.2.0,
-                      ghc >= 9.0 && <= 9.1,
-                      ghc-paths
+                      ghc >= 9.3
     hs-source-dirs:   app
     default-language: Haskell2010
