initial clone of StgToCmm

--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -25,11 +25,12 @@ executable sandbox
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:  
+    other-modules:  StgToCmmLite
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.14.2.0,
-                      ghc >= 9.3
+                      ghc >= 9.3,
+                      bytestring >= 0.10
     hs-source-dirs:   app
     default-language: Haskell2010
