--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -32,5 +32,5 @@ executable sandbox
     build-depends:    base >=4.14.2.0,
                       ghc >= 9.3,
                       bytestring >= 0.10
-    hs-source-dirs:   app
+    hs-source-dirs:   .
     default-language: Haskell2010
