--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -25,7 +25,7 @@ executable sandbox
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:  StgToCmmLite, StackLang
+    other-modules:  StgToCmmLite, StackLang, Simple.Stg
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
