--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -25,7 +25,8 @@ executable sandbox
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack
+    other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
+                    Simple.Stg.Outputable
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
