--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -26,7 +26,8 @@ executable sandbox
 
     -- Modules included in this executable, other than Main.
     other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
-                    Simple.Stg.Outputable
+                    Simple.Stg.Outputable,
+                    Simple.ImportStg
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
