--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -36,3 +36,19 @@ executable sandbox
                       bytestring >= 0.10
     hs-source-dirs:   .
     default-language: Haskell2010
+
+executable showcfg
+    main-is:          ShowCfg.hs
+
+    -- Modules included in this executable, other than Main.
+    other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
+                    Simple.Stg.Outputable,
+                    Simple.ImportStg, Simple.Codegen, Simple.Common
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base >=4.14.2.0,
+                      ghc >= 9.3,
+                      bytestring >= 0.10
+    hs-source-dirs:   .
+    default-language: Haskell2010
