--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -21,10 +21,11 @@ maintainer:         nr@cs.tufts.edu
 -- category:
 extra-source-files: CHANGELOG.md
 
-program-default-options
-  ghc-options: -haddock
+common program-default-options
+  ghc-options: -haddock -Werror -Wincomplete-patterns -Wall
 
 executable sandbox
+    import: program-default-options
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
@@ -41,12 +42,14 @@ executable sandbox
     default-language: Haskell2010
 
 executable showcfg
+    import: program-default-options
     main-is:          ShowCfg.hs
 
     -- Modules included in this executable, other than Main.
     other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
                     Simple.Stg.Outputable,
-                    Simple.ImportStg, Simple.Codegen, Simple.Common
+                    Simple.ImportStg, Simple.Codegen, Simple.Common,
+                    DotCfg
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -55,3 +58,5 @@ executable showcfg
                       bytestring >= 0.10
     hs-source-dirs:   .
     default-language: Haskell2010
+
+    ghc-options:
