--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -66,7 +66,7 @@ executable ptest
     main-is:          PTest.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:  GHC.Cmm.Dataflow.Dominators, DotCfg, PetersonR
+    other-modules:  GHC.Cmm.Dataflow.Dominators, DotCfg, PetersonR, SCode
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
