--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -24,42 +24,42 @@ extra-source-files: CHANGELOG.md
 common program-default-options
   ghc-options: -haddock -Werror -Wincomplete-patterns -Wall -Wno-name-shadowing
 
-executable sandbox
-    import: program-default-options
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
-                    Simple.Stg.Outputable,
-                    Simple.ImportStg, Simple.Codegen, Simple.Common
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base >=4.14.2.0,
-                      ghc >= 9.3,
-                      bytestring >= 0.10
-    hs-source-dirs:   .
-    default-language: Haskell2010
-
-executable showcfg
-    import: program-default-options
-    main-is:          ShowCfg.hs
-
-    -- Modules included in this executable, other than Main.
-    other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
-                    Simple.Stg.Outputable,
-                    Simple.ImportStg, Simple.Codegen, Simple.Common,
-                    DotCfg, GHC.Cmm.Dataflow.Dominators, Peterson, PetersonR
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-    build-depends:    base >=4.14.2.0,
-                      ghc >= 9.3,
-                      bytestring >= 0.10
-    hs-source-dirs:   .
-    default-language: Haskell2010
-
-    ghc-options:
+--  executable sandbox
+--      import: program-default-options
+--      main-is:          Main.hs
+--  
+--      -- Modules included in this executable, other than Main.
+--      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
+--                      Simple.Stg.Outputable,
+--                      Simple.ImportStg, Simple.Codegen, Simple.Common
+--  
+--      -- LANGUAGE extensions used by modules in this package.
+--      -- other-extensions:
+--      build-depends:    base >=4.14.2.0,
+--                        ghc >= 9.3,
+--                        bytestring >= 0.10
+--      hs-source-dirs:   .
+--      default-language: Haskell2010
+--  
+--  executable showcfg
+--      import: program-default-options
+--      main-is:          ShowCfg.hs
+--  
+--      -- Modules included in this executable, other than Main.
+--      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
+--                      Simple.Stg.Outputable,
+--                      Simple.ImportStg, Simple.Codegen, Simple.Common,
+--                      DotCfg, GHC.Cmm.Dataflow.Dominators, Peterson, PetersonR
+--  
+--      -- LANGUAGE extensions used by modules in this package.
+--      -- other-extensions:
+--      build-depends:    base >=4.14.2.0,
+--                        ghc >= 9.3,
+--                        bytestring >= 0.10
+--      hs-source-dirs:   .
+--      default-language: Haskell2010
+--  
+--      ghc-options:
 
 executable ptest
     import: program-default-options
