--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -67,7 +67,7 @@ executable ptest
 
     -- Modules included in this executable, other than Main.
     other-modules:  GHC.Cmm.Dataflow.Dominators, DotCfg, PetersonR, SCode,
-                    GHC.Wasm.ControlFlow
+                    GHC.Wasm.ControlFlow, GHC.Wasm.Ppr.Control
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
