--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -68,7 +68,9 @@ executable ptest
     -- Modules included in this executable, other than Main.
     other-modules:  GHC.Cmm.Dataflow.Dominators, DotCfg, SCode,
                     GHC.Wasm.ControlFlow, GHC.Wasm.Ppr.Control,
-                    GHC.Wasm.ControlFlow.Run, GHC.Wasm.ControlFlow.OfCmm
+                    GHC.Wasm.ControlFlow.Run, GHC.Wasm.ControlFlow.OfCmm,
+                    GHC.Cmm.Dataflow.Dominators.Lint
+                    
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
