--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -70,15 +70,16 @@ executable ptest
                     GHC.Wasm.ControlFlow, GHC.Wasm.Ppr.Control,
                     GHC.Wasm.ControlFlow.Run, GHC.Wasm.ControlFlow.OfCmm,
                     GHC.Cmm.Dataflow.Dominators.Lint,
-                    GHC.Test.ControlMonad, GHC.Cmm.LoopInfo
-                    
+                    GHC.Test.ControlMonad, GHC.Cmm.LoopInfo,
+                    GHC.Test.ControlMonad.QC
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:    base >=4.14.2.0,
                       ghc >= 9.3,
                       bytestring >= 0.10,
-                      filepath >= 1.4
+                      filepath >= 1.4,
+                      QuickCheck >= 2.14.2
     hs-source-dirs:   .
     default-language: Haskell2010
 
