add FlowTest to ptest

--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -73,7 +73,8 @@ executable ptest
                     GHC.Test.ControlMonad, GHC.Cmm.LoopInfo,
                     GHC.Test.ControlMonad.QC,
                     GHC.Test.CmmPaths,
-                    GHC.Cmm.ControlFlow.Run
+                    GHC.Cmm.ControlFlow.Run,
+                    FlowTest
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
