--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -87,6 +87,7 @@ executable ptest
                       ghc-boot >= 9.3,
                       bytestring >= 0.10,
                       filepath >= 1.4,
+                      array >= 0.5,
                       QuickCheck >= 2.14.2
     hs-source-dirs:   .
     default-language: Haskell2010
