--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -68,7 +68,9 @@ executable ptest
     -- Modules included in this executable, other than Main.
     other-modules:  GHC.Cmm.Dataflow.Dominators, DotCfg, SCode,
                     GHC.Wasm.ControlFlow, GHC.Wasm.Ppr.Control,
-                    GHC.Wasm.ControlFlow.Run, GHC.Wasm.ControlFlow.OfCmm,
+                    GHC.Wasm.ControlFlow.Run,
+                    GHC.Wasm.ControlFlow.OfCmm,
+                    GHC.Wasm.ControlFlow.Paper,
                     GHC.Cmm.Dataflow.Dominators.Lint,
                     GHC.Cmm.Reducibility,
                     GHC.Test.ControlMonad, GHC.Cmm.LoopInfo,
@@ -76,6 +78,7 @@ executable ptest
                     GHC.Test.CmmPaths,
                     GHC.Cmm.ControlFlow.Run,
                     GHC.Wasm.ControlFlow.Collapse,
+                    GHC.Wasm.Paper,
                     GHC.Data.Graph.Inductive,
                     FlowTest,
                     StgToCmmLite
