--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -91,7 +91,8 @@ executable ptest
                       bytestring >= 0.10,
                       filepath >= 1.4,
                       array >= 0.5,
-                      QuickCheck >= 2.14.2
+                      QuickCheck >= 2.14.2,
+                      containers >= 0.6
     hs-source-dirs:   .
     default-language: Haskell2010
 
