--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -99,3 +99,20 @@ executable ptest
 
     ghc-options:
 
+executable btt
+    import: program-default-options
+    main-is:          BTT.hs
+
+    -- Modules included in this executable, other than Main.
+    other-modules:  
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base >=4.14.2.0,
+                      ghc >= 9.3,
+                      containers >= 0.6
+    hs-source-dirs:   .
+    default-language: Haskell2010
+
+    ghc-options:
+
