--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -104,7 +104,7 @@ executable btt
     main-is:          BTT.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:  
+    other-modules:    BackendRecord
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
