--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -27,12 +27,12 @@ common program-default-options
 --  executable sandbox
 --      import: program-default-options
 --      main-is:          Main.hs
---  
+--
 --      -- Modules included in this executable, other than Main.
 --      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
 --                      Simple.Stg.Outputable,
 --                      Simple.ImportStg, Simple.Codegen, Simple.Common
---  
+--
 --      -- LANGUAGE extensions used by modules in this package.
 --      -- other-extensions:
 --      build-depends:    base >=4.14.2.0,
@@ -40,17 +40,17 @@ common program-default-options
 --                        bytestring >= 0.10
 --      hs-source-dirs:   .
 --      default-language: Haskell2010
---  
+--
 --  executable showcfg
 --      import: program-default-options
 --      main-is:          ShowCfg.hs
---  
+--
 --      -- Modules included in this executable, other than Main.
 --      other-modules:  StgToCmmLite, StackLang, Simple.Stg, Simple.Stack,
 --                      Simple.Stg.Outputable,
 --                      Simple.ImportStg, Simple.Codegen, Simple.Common,
 --                      DotCfg, GHC.Cmm.Dominators, Peterson, PetersonR
---  
+--
 --      -- LANGUAGE extensions used by modules in this package.
 --      -- other-extensions:
 --      build-depends:    base >=4.14.2.0,
@@ -58,7 +58,7 @@ common program-default-options
 --                        bytestring >= 0.10
 --      hs-source-dirs:   .
 --      default-language: Haskell2010
---  
+--
 --      ghc-options:
 
 executable ptest
@@ -80,6 +80,7 @@ executable ptest
                     GHC.Test.CmmPaths,
                     GHC.Cmm.ControlFlow.Run,
                     GHC.Wasm.ControlFlow.Collapse,
+                    -- GHC.Cmm.Collapse,
                     GHC.Wasm.Paper,
                     GHC.Data.Graph.Inductive,
                     GHC.Data.Graph.Inductive.PatriciaTree,
@@ -95,7 +96,8 @@ executable ptest
                       filepath >= 1.4,
                       array >= 0.5,
                       QuickCheck >= 2.14.2,
-                      containers >= 0.6
+                      containers >= 0.6,
+                      mtl >= 2.2
     hs-source-dirs:   .
     default-language: Haskell2010
 
@@ -106,7 +108,7 @@ executable btt
     main-is:          BTT.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:    BackendRecord
+    other-modules:
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -118,3 +120,19 @@ executable btt
 
     ghc-options:
 
+executable bcomp
+    import: program-default-options
+    main-is:          BComp.hs
+
+    -- Modules included in this executable, other than Main.
+    other-modules:
+
+    -- LANGUAGE extensions used by modules in this package.
+    -- other-extensions:
+    build-depends:    base >=4.14.2.0,
+                      ghc >= 9.3,
+                      containers >= 0.6
+    hs-source-dirs:   .
+    default-language: Haskell2010
+
+    ghc-options:
