--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -91,6 +91,7 @@ executable ptest
                     FlowTest
                     StgToCmmLite
                     DotGraph
+                    Words
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -102,7 +103,9 @@ executable ptest
                       array >= 0.5,
                       QuickCheck >= 2.14.2,
                       containers >= 0.6,
-                      mtl >= 2.2
+                      mtl >= 2.2,
+                      utf8-string == 1.0.2,
+                      cryptohash-sha1 == 0.11.*
     hs-source-dirs:   .
     default-language: Haskell2010
 
