--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -92,6 +92,7 @@ executable ptest
                     StgToCmmLite
                     DotGraph
                     Words
+                    TxTest
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
