clean up dominators module and its clients

--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -93,6 +93,7 @@ executable ptest
                     DotGraph
                     Words
                     TxTest
+                    Attic.Dominators
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
