--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -72,7 +72,7 @@ executable ptest
                     GHC.Wasm.ControlFlow
                     GHC.Wasm.Ppr.Control
                     GHC.Wasm.ControlFlow.Run
-                    GHC.Wasm.ControlFlow.Opt
+                    GHC.Wasm.ControlFlow.FromCmm
                     GHC.Wasm.ControlFlow.Paper
                     GHC.Wasm.ControlFlow.PaperRun
                     GHC.Cmm.Dominators.Lint
