--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -21,16 +21,73 @@ maintainer:         nr@cs.tufts.edu
 -- category:
 extra-source-files: CHANGELOG.md
 
-executable sandbox
-    main-is:          Main.hs
+common program-default-options
+  ghc-options: -haddock -Werror -Wincomplete-patterns -Wall -Wno-name-shadowing -fno-ignore-asserts
+
+executable ptest
+    import: program-default-options
+    main-is:        Placeholder.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:  
+
+                     -- dominators
+--                    GHC.Cmm.Dominators
+--
+--                     -- graphs
+--                    GHC.Data.Graph.Inductive.Graph
+--                    GHC.Data.Graph.Inductive.PatriciaTree
+--
+--                     -- translation
+--                    GHC.Wasm.ControlFlow
+--                    GHC.Wasm.ControlFlow.FromCmm
+--
+--                     -- node splitting
+--                    GHC.Wasm.ControlFlow.Collapse
+--                    GHC.Cmm.Collapse
+--                    GHC.Cmm.Reducibility
+--
+--                     -- testing
+--                    GHC.Wasm.Ppr.Control
+--                    GHC.Test.ControlMonad
+--                    GHC.Test.ControlMonad.QC
+--                    GHC.Test.CmmPaths
+--                    GHC.Cmm.ControlFlow.Run
+--                    GHC.Wasm.ControlFlow.Run
+--                    GHC.Cmm.Dominators.Lint
+--
+--                    FlowTest
+--                    StgToCmmLite
+--                    DotCfg
+--                    DotGraph
+--                    Words
+--                    TxTest
+--
+--                     -- attic
+--                    Attic.Dominators
+--                    Attic.Opt
+--                    Attic.FlowCollapse
+--                    Attic.LoopInfo
+--                    Attic.UnoptControlTx
+--                    Attic.PaperLang
+--                    Attic.PaperRun
+--                    Attic.PaperTx
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base >=4.14 && <4.15,
-                      ghc ==8.10.5,
-                      ghc-paths >=0.1
-    hs-source-dirs:   app
+    build-depends:    base >=4.14.2.0,
+                      ghc >= 9.3,
+                      ghc-boot >= 9.3,
+                      bytestring >= 0.10,
+                      filepath >= 1.4,
+                      array >= 0.5,
+                      QuickCheck >= 2.14.2,
+                      containers >= 0.6,
+                      mtl >= 2.2,
+                      utf8-string == 1.0.2,
+                      cryptohash-sha1 == 0.11.*,
+                      optparse-applicative == 0.17.*
+    hs-source-dirs:   .
     default-language: Haskell2010
+
+    ghc-options:
