--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -41,12 +41,12 @@ executable ptest
 --                     -- translation
 --                    GHC.Wasm.ControlFlow
 --                    GHC.Wasm.ControlFlow.FromCmm
---
---                     -- node splitting
---                    GHC.Wasm.ControlFlow.Collapse
---                    GHC.Cmm.Collapse
---                    GHC.Cmm.Reducibility
---
+
+                     -- node splitting
+                    GHC.Data.Graph.Collapse
+                    GHC.Cmm.Collapse
+                    GHC.Cmm.Reducibility
+
 --                     -- testing
 --                    GHC.Wasm.Ppr.Control
 --                    GHC.Test.ControlMonad
