--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -26,7 +26,7 @@ common program-default-options
 
 executable ptest
     import: program-default-options
-    main-is:        Placeholder.hs
+    main-is:        PTest.hs
 
     -- Modules included in this executable, other than Main.
     other-modules:  
