--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -105,7 +105,7 @@ executable rtest
     build-depends:    base >=4.14.2.0,
                       ghc >= 9.3,
                       ghc-boot >= 9.3,
---                      bytestring >= 0.10,
+                      bytestring >= 0.10,
                       filepath >= 1.4,
 --                      array >= 0.5,
 --                      QuickCheck >= 2.14.2,
