--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -102,6 +102,7 @@ executable rtest
                     ActionsAndDecisions
                     BitConsumer
                     ControlTestMonad
+                    EntropyTransducer
                     LoadCmmGroup
                     RunCmm
                     StgToCmmLite
