--- a/sandbox.cabal
+++ b/sandbox.cabal
@@ -99,8 +99,9 @@ executable rtest
     -- Modules included in this executable, other than Main.
     other-modules:
 
-                    ActionsAndDecisions
+                    ActionsAndObservations
                     BitConsumer
+                    CmmPaths
                     ControlTestMonad
                     EntropyTransducer
                     LoadCmmGroup
